--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=expensetracker
-spring.profiles.active=dev
-spring.data.mongodb.uri=mongodb+srv://<username>:<password>@<clustername>.arzst5r.mongodb.net/?retryWrites=true&w=majority&appName=<projectname>
-spring.data.mongodb.database=<databasename>
+#spring.profiles.active=dev
+spring.data.mongodb.uri={MONGODB_URI}
+spring.data.mongodb.database={MONGODB_DB}
 
