--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,5 @@ spring.application.name=expensetracker
 spring.profiles.active=dev
 spring.data.mongodb.uri=${MONGODB_URI}
 spring.data.mongodb.database=${MONGODB_DB}
-
+gemini.api.url={GEMINI_API_URL}
+gemini.api.key={GEMINI_API_KEY}
